2012-11-22  Vladimir Makarov  <vmakarov@redhat.com>

	PR middle-end/55430
	* lra.c: Move #include "hard-reg-set.h" before #include "rtl.h".
	(new_insn_reg): Update biggest_mode.
	(collect_non_operand_hard_regs): Check eliminable regs too.
	(initialize_lra_reg_info_element): Initialize biggest_mode.
	(add_regs_to_insn_regno_info): Ignore non-allocatable
	non-eliminable hard regs.
	(lra.c): Move setting lra_no_alloc_regs before
	init_insn_recog_data.
	* lra-constraints.c (simplify_operand_subreg): Add a comment.
	(lra_constraints): Ignore equivalent memory of
	regs occuring in paradoxical subregs.
	* lra-lives.c (lra_create_live_ranges): Add a comment.

2012-11-22  Dmitry Vyukov  <dvyukov@google.com>
	    Wei Mi  <wmi@google.com>

	* builtins.def (DEF_SANITIZER_BUILTIN): Define tsan builtins. 
	* sanitizer.def: Ditto. 
	* Makefile.in (tsan.o): Add tsan.o target. 
	(BUILTINS_DEF): Add sanitizer.def.
	* passes.c (init_optimization_passes): Add tsan passes.
	* tree-pass.h (register_pass_info): Ditto.
	* toplev.c (compile_file): Ditto. 
	* doc/invoke.texi: Document tsan related options.
	* gcc.c (LINK_COMMAND_SPEC): Add LIBTSAN_SPEC in link command if
	-fsanitize=thread.
	* tsan.c: New file about tsan.
	* tsan.h: Ditto.
	* common.opt: Add -fsanitize=thread.

2012-11-22  Uros Bizjak  <ubizjak@gmail.com>

	* doc/md.texi (RTL Templates Transformation): Use @pxref for
	cross-reference in parentheses.

2012-11-22  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* doc/md.texi (AArch64 family): Remove Utf.

2012-11-22  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (*jcc<mode>_0_i387): Macroize insn
	from *fp_jcc_3_387 using X87MODEF mode iterator.
	(*jcc<mode>_0_r_i387): New.
	(*jccxf_i387): Ditto.
	(*jccxf_r_i387): Ditto.
	(*jcc<mode>_i387): Macroize insn from *fp_jcc_1_387 using
	MODEF mode iterator.
	(*jcc<mode>_r_i387): Macroize insn from *fp_jcc_1r_387 using
	MODEF mode iterator.
	(*jccu<mode>_i387): Macroize insn from *fp_jcc_2_387 using
	X87MODEF mode iterator.